--- a/index.html
+++ b/index.html
@@ -9,8 +9,24 @@
 </head>
 <body>
     
-    <div class="si-calculate d-block mt-4 mx-auto bg-light rounded-5">
-        <h2 class="text-center fs-3 p-3">Calculate Simple Interest</h2>
+    <div class="si-calculate d-block mt-5 mx-auto bg-light rounded-5">
+        <h2 class="text-center fw-bold fs-3 p-3">Calculate Simple Interest</h2>
+
+        <div class="ms-4 py-1 px-2">
+            <span class="fs-5 fw-semibold">Enter Amount</span> <br>
+            <input class="border border-dark my-2 py-1 px-2 rounded-3" type="text" placeholder="enter amount">
+        </div>
+        <div class="ms-4 py-1 px-2">
+            <span class="fs-5 fw-semibold">Enter Rate</span> <br>
+            <input class="border border-dark my-2 py-1 px-2 rounded-3" type="text" placeholder="enter rate">
+        </div>
+        <div class="ms-4 py-1 px-2">
+            <span class="fs-5 fw-semibold">Enter Time</span> <br>
+            <input class="border border-dark my-2 py-1 px-2 rounded-3" type="text" placeholder="enter time">
+        </div>
+        <div>
+            <button class="btn d-block mx-auto m-3 py-1 px-2 fs-4 fw-medium border border-dark" type="button">Calculate</button>
+        </div>
     </div>
 
 
