changes made in CSS

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
   </head>
   <body>
-    <div class="si-calculate d-block mt-5 mx-auto bg-light rounded-5">
+    <div class="si-calculate d-block mt-5 mx-auto bg-light rounded-5 border border-dark">
       <h2 class="text-center fw-bold fs-3 p-3">Calculate Simple Interest</h2>
 
       <div class="ms-4 py-1 px-2">
@@ -48,7 +48,7 @@
       </p>
       <div>
         <button
-          class="btn d-block mx-auto m-3 py-1 px-2 fs-4 fw-medium border border-dark"
+          class="btn d-block mx-auto m-3 py-1 px-2 fs-4 fw-medium border border-secondary"
           type="button"
           onclick="calculate()"
         >
